jvm speed fine-tuning: new Integer replaced by Integer.valueOf strings += in loops replaced by stringbuilder/buffer append
git-svn-id: https://svn.code.sf.net/p/itext/code/trunk@4645 3a709846-db2a-4fbd-be0b-eb932eee6479