@@ -880,7 +880,7 @@ class TrueTypeFont extends BaseFont {
                 int[] r = new int[2];
                 r[0] = startGlyphID;
                 r[1] = getGlyphWidth(r[0]);
-                h.put(new Integer(i), r);
+                h.put(Integer.valueOf(i), r);
                 startGlyphID++;
             }
         }
@@ -899,7 +899,7 @@ class TrueTypeFont extends BaseFont {
             int r[] = new int[2];
             r[0] = rf.readUnsignedByte();
             r[1] = getGlyphWidth(r[0]);
-            h.put(new Integer(k), r);
+            h.put(Integer.valueOf(k), r);
         }
         return h;
     }
@@ -951,7 +951,7 @@ class TrueTypeFont extends BaseFont {
                 int r[] = new int[2];
                 r[0] = glyph;
                 r[1] = getGlyphWidth(r[0]);
-                h.put(new Integer(fontSpecific ? ((j & 0xff00) == 0xf000 ? j & 0xff : j) : j), r);
+                h.put(Integer.valueOf(fontSpecific ? ((j & 0xff00) == 0xf000 ? j & 0xff : j) : j), r);
             }
         }
         return h;
@@ -972,7 +972,7 @@ class TrueTypeFont extends BaseFont {
             int r[] = new int[2];
             r[0] = rf.readUnsignedShort();
             r[1] = getGlyphWidth(r[0]);
-            h.put(new Integer(k + start_code), r);
+            h.put(Integer.valueOf(k + start_code), r);
         }
         return h;
     }
@@ -1204,7 +1204,7 @@ class TrueTypeFont extends BaseFont {
                 usemap = cmap10;
             for (Map.Entry<Integer, int[]> e: usemap.entrySet()) {
                 int[] v = e.getValue();
-                Integer gi = new Integer(v[0]);
+                Integer gi = Integer.valueOf(v[0]);
                 if (longTag.containsKey(gi))
                     continue;
                 int c = e.getKey().intValue();
@@ -1235,7 +1235,7 @@ class TrueTypeFont extends BaseFont {
                 usemap = cmap10;
             for (Map.Entry<Integer, int[]> e: usemap.entrySet()) {
                 int[] v = e.getValue();
-                Integer gi = new Integer(v[0]);
+                Integer gi = Integer.valueOf(v[0]);
                 if (longTag.contains(gi))
                     continue;
                 int c = e.getKey().intValue();
@@ -1301,7 +1301,7 @@ class TrueTypeFont extends BaseFont {
                                 metrics = getMetricsTT(unicodeDifferences[k]);
                         }
                         if (metrics != null)
-                            glyphs.add(new Integer(metrics[0]));
+                            glyphs.add(Integer.valueOf(metrics[0]));
                     }
                 }
                 addRangeUni(glyphs, subsetp);
@@ -1435,15 +1435,15 @@ class TrueTypeFont extends BaseFont {
      */
     public int[] getMetricsTT(int c) {
         if (cmapExt != null)
-            return cmapExt.get(new Integer(c));
+            return cmapExt.get(Integer.valueOf(c));
         if (!fontSpecific && cmap31 != null)
-            return cmap31.get(new Integer(c));
+            return cmap31.get(Integer.valueOf(c));
         if (fontSpecific && cmap10 != null)
-            return cmap10.get(new Integer(c));
+            return cmap10.get(Integer.valueOf(c));
         if (cmap31 != null)
-            return cmap31.get(new Integer(c));
+            return cmap31.get(Integer.valueOf(c));
         if (cmap10 != null)
-            return cmap10.get(new Integer(c));
+            return cmap10.get(Integer.valueOf(c));
         return null;
     }
 
@@ -1566,7 +1566,7 @@ class TrueTypeFont extends BaseFont {
             map = cmap31;
         if (map == null)
             return null;
-        int metric[] = map.get(new Integer(c));
+        int metric[] = map.get(Integer.valueOf(c));
         if (metric == null || bboxes == null)
             return null;
         return bboxes[metric[0]];
